# ServerForBooking-gRPC

./: .gitignore  CMakeLists.txt  Dockerfile  README.md  booking_service.proto
src/: Booking.cpp  Booking.h  BookingService.cpp  BookingService.h  CMakeLists.txt  DummyDataFiller.h  IBookingDatabase.cpp  IBookingDatabase.h  main.cpp
test/: CMakeLists.txt  main.cpp  test_BookingService.cpp  test_InMemoryDatabase.cpp
